fixed the overflow issue for the title and description

--- a/src/Post/Post.css
+++ b/src/Post/Post.css
@@ -55,7 +55,7 @@
     font-family: Arial, Helvetica, sans-serif;
     margin-bottom: 8px;
     line-height: clamp(20px,1.67vw,28px);
-
+    overflow-wrap: break-word;
 }
 .content-avatar{
     border-radius: 50%;
